# blackboard

./: .gitignore  README.md
Documents/: IPC API Specifications.odt
sockets/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  sockets
sockets/1. Annoy the server/include/: client.h
sockets/1. Annoy the server/src/: CMakeLists.txt  client.c  main.c  server.c
sockets/2. Mob the server/include/: client.h  server.h
sockets/2. Mob the server/src/: CMakeLists.txt  client.c  main.c  server.c
sockets/3. Crowd Control/: client  client_cpp  ipc
sockets/3. Crowd Control/include/: client_handler.h  client_t.h  serialize.h  settings.h
sockets/3. Crowd Control/include/ipc/: client_api.h
sockets/3. Crowd Control/src/: CMakeLists.txt  client.c  client_api.c  client_api.cc  client_handler.c  ipc.c  maps.cc  serialize.cc  test.c  themaps.cc
sockets/3. Crowd Control/src/cmocka/: cmocka.c
sockets/4. Yann's C Playground/: socket
sockets/4. Yann's C Playground/include/: client.h  server.h
sockets/4. Yann's C Playground/src/: CMakeLists.txt  clientdoc.c  maindoc.c  serverdoc.c  translate  translate.cc
sockets/include/: server.h
sockets/src/: client.c  server.c
